My first portal news

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="css/footer.css"/>
     <link rel="stylesheet" href="css/content.css"/>
     <link rel="stylesheet" href="css/responsive.css"/>
-    <link rel="icon" type="image/ico" href="imagenes/icon.ico"/>
+    <link rel="icon" type="image/ico" href="images/icon.ico"/>
 </head>
 <body>
     <section class="boxgeneral">
         <header>
-            <a href="index.html"><img class="logo" src="imagenes/NEWS.png" title="Logo"/></a>
+            <a href="index.html"><img class="logo" src="images/NEWS.png" title="Logo"/></a>
             <a href="#" class="menu_on">
                 <span></span>
                 <span></span>
@@ -22,7 +22,7 @@
             <nav>
                 <ul class="menu">
                     <li><a href="index.html">INICIO</a></li>
-                    <li><a href="#">LOCALES</a>
+                    <li><a href="#">LOCAL</a>
                         <ul class="submenu">
                             <li><a href="#">Política</a></li>
                             <li><a href="#">Policiales</a></li>
@@ -30,7 +30,7 @@
                             <li><a href="#">Interes General</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">COMUNIDAD</a>
+                    <li><a href="#">COMUNITY</a>
                         <ul class="submenu">
                             <li><a href="#">Sociales</a></li>
                             <li><a href="#">Periodismo</a></li>
@@ -38,7 +38,7 @@
                             <li><a href="#">Carta de Lectores</a></li>
                         </ul>    
                     </li>
-                    <li><a href="#">SERVICIOS</a>
+                    <li><a href="#">SERVICES</a>
                         <ul class="submenu">
                             <li><a href="#">Hospitales</a></li>
                             <li><a href="#">Emergencias</a></li>
@@ -47,7 +47,7 @@
                             <li><a href="#">Escuelas</a></li>
                         </ul>
                     </li>
-                    <li><a href="#">DEPORTES</a>
+                    <li><a href="#">SPORTS</a>
                         <ul class="submenu">
                             <li><a href="#">Fútbol</a></li>
                             <li><a href="#">Tenis</a></li>
@@ -63,7 +63,7 @@
                 <figcaption > 
                     CATALAN INDEPENDENCE DRIVE
                 </figcaption>
-                <img class="first" src="imagenes/catalan.jpg" alt="CATALAN INDEPENDENCE DRIVE"/>
+                <img class="first" src="images/catalan.jpg" alt="CATALAN INDEPENDENCE DRIVE"/>
             </div>    
             <div class="box4">
                 <p>
@@ -79,7 +79,7 @@
                 <figcaption>
                     PRIVACY VIOLATIONS
                 </figcaption>
-                <img src="imagenes/privacy.jpg" alt="PRIVACY VIOLATIONS"/>
+                <img src="images/privacy.jpg" alt="PRIVACY VIOLATIONS"/>
             </div>    
             <div class="box2">
                 <p>
@@ -95,7 +95,7 @@
                 <figcaption>
                     CORONAVIRUS
                 </figcaption>
-                <img src="imagenes/coronavirus.jpg" alt="CORONAVIRUS"/>
+                <img src="images/coronavirus.jpg" alt="CORONAVIRUS"/>
             </div>    
             <div class="box2">
                 <p>
@@ -110,7 +110,7 @@
                 <figcaption>
                     POLITICS
                 </figcaption>
-                <img src="imagenes/politics.jpg" alt="POLITICS"/>
+                <img src="images/politics.jpg" alt="POLITICS"/>
             </div>    
             <div class="box2">
                     <p>
@@ -124,7 +124,7 @@
                 <figcaption>
                     TOURISM
                 </figcaption>
-                <img src="imagenes/tourism.jpg" alt="TOURISM"/>
+                <img src="images/tourism.jpg" alt="TOURISM"/>
             </div>    
                 <div class="box2">
                 <p>
@@ -141,10 +141,10 @@
                 <p class="redes">
                     Seguinos en:
                 </p>
-               <img class="icoon" src="imagenes/face.ico" alt="Facebook" title="Facebook"/>
-               <img class="icoon" src="imagenes/ig.ico" alt="Instagram" title="Instagram"/>
-               <img class="icoon" src="imagenes/wsp.ico" alt="Whatsapp" title="Whatsapp"/>
-               <img class="icoon" src="imagenes/twitter.ico" alt="Twitter" title="Twitter"/>
+               <img class="icoon" src="images/face.ico" alt="Facebook" title="Facebook"/>
+               <img class="icoon" src="images/ig.ico" alt="Instagram" title="Instagram"/>
+               <img class="icoon" src="images/wsp.ico" alt="Whatsapp" title="Whatsapp"/>
+               <img class="icoon" src="images/twitter.ico" alt="Twitter" title="Twitter"/>
             </figure>
             <div class="info">
                 <p>
